<resources>
    <string name="app_name">Barbell</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_workout">Workout</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_measure">Measure</string>
    <string name="settings">settings</string>
    <string name="calendar">calendar</string>
    <string name="add">add</string>
    <string name="filter">filter</string>
    <string name="search">search</string>
    <string name="element_text">Exercise</string>
    <string name="name_key">name_key</string>
    <string name="username_key">username_key</string>
    <string name="email_key">email_key</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">back</string>
    <string name="Settings">Settings</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="privacy_policy">I accept privacy policy.</string>
    <string name="description">Description</string>
    <string name="exercise">Exercises</string>
    <string name="log_out">LOG OUT</string>
    <string name="start_workout">CLEAR WORKOUT</string>
    <string name="add_set">ADD SET</string>
    <string name="add_exercise">ADD EXERCISE</string>
    <string name="save_workout">SAVE WORKOUT</string>
    <string name="sets">Sets:</string>
    <string name="volume">Volume:</string>
    <string name="max_load">Max load:</string>
    <string name="date">Date:</string>
    <string name="total_volume">Total volume:</string>
    <string name="x">X</string>
    <string name="remove">REMOVE</string>
    <string name="workouts">Workouts:</string>
    <string name="points">Points:</string>
    <string name="note">Note:</string>
    <string name="load_kg">Load [kg]</string>
    <string name="reps">Reps</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>