<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_access_time_filled_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="@string/title_exercises" />

    <item
        android:id="@+id/navigation_measure"
        android:icon="@drawable/ic_baseline_straighten_24"
        android:title="@string/title_measure" />

</menu>