<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="pl.polsl.barbell.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="pl.polsl.barbell.fragment.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="pl.polsl.barbell.fragment.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />
    <fragment
        android:id="@+id/navigation_exercises"
        android:name="pl.polsl.barbell.fragment.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises">
        <action
            android:id="@+id/action_navigation_exercises_to_exerciseDetailsFragment"
            app:destination="@id/exerciseDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_measure"
        android:name="pl.polsl.barbell.fragment.MeasureFragment"
        android:label="@string/title_measure"
        tools:layout="@layout/fragment_measure" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="pl.polsl.barbell.fragment.SettingsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_settingsFragment_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/exerciseDetailsFragment"
        android:name="pl.polsl.barbell.fragment.ExerciseDetailsFragment"
        android:label="ExerciseDetailsFragment" >
        <action
            android:id="@+id/action_exerciseDetailsFragment_to_navigation_exercises"
            app:destination="@id/navigation_exercises" />
    </fragment>
</navigation>