<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Workout"
            type="pl.polsl.barbell.model.Workout" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.WorkoutFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/workout_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="2dp"
                android:text="@{Workout.note}"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exercises_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                app:layout_constraintBottom_toTopOf="@+id/add_exercise_layout"
                app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

            <LinearLayout
                android:id="@+id/add_exercise_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                app:layout_constraintBottom_toTopOf="@+id/clear_save_layout">

                <Spinner
                    android:id="@+id/exercises_list_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium" />

                <Button
                    android:id="@+id/add_exercise_button"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/add_exercise" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/clear_save_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/start_workout_button"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/start_workout" />

                <Button
                    android:id="@+id/save_workout_button"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/save_workout" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>