<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Workout"
            type="pl.polsl.barbell.model.Workout" />

        <variable
            name="listener"
            type="pl.polsl.barbell.adapter.ItemClickListener" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:strokeColor="@color/design_default_color_primary"
        app:strokeWidth="2dp"
        android:clickable="true"
        android:elevation="@dimen/cardview_default_elevation"
        android:onClick="@{(view) -> listener.onClicked(view, Workout.uuid)}"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noteLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/note"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/noteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@{Workout.note}"
                android:textSize="20sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/date"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:inputType="date"
                    android:text="@{Workout.date.toString()}"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/totalVolumeLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/total_volume"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalVolumeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@{String.valueOf(Workout.getTotalVolume())}"
                    android:textSize="20sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/exerciseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/exercise"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exercisesListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>