<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ExercisesWithSets"
            type="pl.polsl.barbell.model.ExercisesWithSets" />

        <variable
            name="listener"
            type="pl.polsl.barbell.adapter.ItemClickListener" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:clickable="false"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="90"
                app:srcCompat="@drawable/common_full_open_on_phone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@{ExercisesWithSets.exercise.name}"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/setsLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/sets"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/setsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@{String.valueOf(ExercisesWithSets.sets.size())}"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/volumeLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/volume"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/volumeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@{String.valueOf(ExercisesWithSets.getVolume())}"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/maxLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/max_load"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/maxLoadTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@{String.valueOf(ExercisesWithSets.getMaxLoad())}"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>